<resources>
    <string name="app_name">Test Apps</string>
    <string name="content_image">Content Image</string>
    <string name="fruit">Fruit</string>
    <string name="share">Share</string>
    <string name="webview">Webview</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>
